force-app/main/default/objects/Leave_Balance__c/Leave_Balance__c.object-meta.xml
<CustomObject>
    <label>Leave Balance</label>
    <nameField>
        <label>Leave Balance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LeaveBalances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>