force-app/main/default/objects/Leave_Balance__c/fields/Adjustment_History__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_History__c</fullName>
    <label>Adjustment History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>