force-app/main/default/objects/Leave_Balance__c/fields/Auto_Increased_on_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Auto_Increased_on_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Increased on Confirmation</label>
    <type>Checkbox</type>
</CustomField>