force-app/main/default/objects/Leave_Balance__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <formula>Remaining__c  -  Pending__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>