force-app/main/default/objects/Leave_Balance__c/fields/Is_Probation_Balance__c.field-meta.xml
<CustomField>
    <fullName>Is_Probation_Balance__c</fullName>
    <formula>Employee__r.Is_Probation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Probation Balance</label>
    <type>Checkbox</type>
</CustomField>