force-app/main/default/objects/Leave_Balance__c/fields/Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid__c</fullName>
    <formula>(  Opening_Balance__c  +  Carried_Forward__c  )   &gt;=  Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>