force-app/main/default/objects/Leave_Balance__c/fields/Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>LeaveBalances</relationshipName>
    <type>Lookup</type>
</CustomField>