force-app/main/default/objects/Leave_Balance__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leave Type</label>
    <referenceTo>Leave_Type__c</referenceTo>
    <relationshipLabel>LeaveBalances</relationshipLabel>
    <relationshipName>LeaveBalances</relationshipName>
    <type>Lookup</type>
</CustomField>