force-app/main/default/objects/Leave_Balance__c/fields/Pending__c.field-meta.xml
<CustomField>
    <fullName>Pending__c</fullName>
    <label>Pending</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>