force-app/main/default/objects/Leave_Balance__c/fields/Probation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Probation_End_Date__c</fullName>
    <formula>Employee__r.Probation_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probation End Date</label>
    <type>Date</type>
</CustomField>