force-app/main/default/objects/Leave_Balance__c/fields/Six_Month_Period__c.field-meta.xml
<CustomField>
    <fullName>Six_Month_Period__c</fullName>
    <label>Six-Month Period</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>