force-app/main/default/objects/Leave_Balance__c/fields/Six_Month_Used__c.field-meta.xml
<CustomField>
    <fullName>Six_Month_Used__c</fullName>
    <label>Six-Month Used</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>