force-app/main/default/objects/Leave_Balance__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <label>Unique Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>