force-app/main/default/objects/Leave_Balance__c/fields/Updated_Reason__c.field-meta.xml
<CustomField>
    <fullName>Updated_Reason__c</fullName>
    <label>Updated Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>