force-app/main/default/objects/Leave_Balance__c/fields/Warning_Message__c.field-meta.xml
<CustomField>
    <fullName>Warning_Message__c</fullName>
    <formula>IF((Opening_Balance__c + Carried_Forward__c) &lt; Used__c, &quot;CRITICAL: Balance exceeded. Check Leave Requests.&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warning Message</label>
    <type>Text</type>
</CustomField>